--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,8 @@
   font-size: 12px;
   line-height: 24px;
 
-  color: #0f0f0f;
-  background-color: #f6f6f6;
+  background-color: #070016;
+  color: #E7E7E7;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
