--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
   html {
     font-family: "KHドット小伝馬町16", system-ui, sans-serif;
     background-color: black;
-    color: white;
+    color: #E7E7E7;
     line-height: 1;
   }
 }
