--- a/src/styles.css
+++ b/src/styles.css
@@ -5,21 +5,16 @@
 @layer base {
   html {
     font-family: "KHドット小伝馬町16", system-ui, sans-serif;
-    background-color: black;
+    background-color: #070016;
     color: #E7E7E7;
     line-height: 1;
   }
-}
 
-input {
-  color: black;
-}
+  input {
+    color: #070016;
+  }
 
-button {
-  font-family: inherit;
-}
-
-@font-face {
-  font-family: "KHドット小伝馬町16";
-  src: url("./assets/font/KH-Dot-Kodenmachou-16.woff") format('woff'),
+  button {
+    font-family: inherit;
+  }
 }
