--- a/src/input.css
+++ b/src/input.css
@@ -3,6 +3,16 @@
 @tailwind utilities;
 
 @layer base {
+  @font-face {
+    font-family: "KHドット小伝馬町16";
+    src: url("./assets/fonts/KH-Dot-Kodenmacho-16.woff") format("woff");
+  }
+
+  @font-face {
+    font-family: "KHドット小伝馬町12";
+    src: url("./assets/fonts/KH-Dot-Kodenmacho-12.woff") format("woff");
+  }
+
   html {
     font-family: "KHドット小伝馬町16", system-ui, sans-serif;
     background-color: #070016;
