--- a/src/input.css
+++ b/src/input.css
@@ -16,11 +16,12 @@
   html {
     font-family: "KHドット小伝馬町16", system-ui, sans-serif;
     background-color: #070016;
-    color: #E7E7E7;
+    color: #e7e7e7;
     line-height: 1;
   }
 
-  input, select {
+  input,
+  select {
     color: #070016;
   }
 
